dsp-cli/tests/snapshots/auth_snapshots__auth_status_prose_env.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
Authenticated to https://api.example.com via DSP_TOKEN. Token expires 2026-06-25 12:34 UTC.
