dsp-cli/tests/snapshots/auth_snapshots__auth_status_prose_env_expired.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
Authenticated to https://api.example.com via DSP_TOKEN. Token expired 2020-01-01 00:00 UTC.
