dsp-cli/tests/snapshots/auth_snapshots__auth_status_prose_logged_in.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
Logged in to https://api.example.com as user@example.com. Token expires 2026-06-25 12:34 UTC.
