dsp-cli/tests/snapshots/auth_snapshots__auth_status_prose_not_logged_in.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
Not logged in to https://api.example.com.
