dsp-cli/tests/snapshots/auth_snapshots__auth_status_tsv_cache_expired.snap
---
source: tests/auth_snapshots.rs
assertion_line: 466
expression: buf_to_string(&buf)
---
server	user	expires_at	state
https://api.example.com	user@example.com	2020-01-01T00:00:00+00:00	expired
