dsp-cli/tests/snapshots/auth_snapshots__auth_status_tsv_env_expired.snap
---
source: tests/auth_snapshots.rs
expression: out
---
server	user	expires_at	state
https://api.example.com		2020-01-01T00:00:00+00:00	expired
