dsp-cli/tests/snapshots/auth_snapshots__auth_status_tsv_logged_in.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
server	user	expires_at	state
https://api.example.com	user@example.com	2026-06-25T12:34:56+00:00	logged_in
