dsp-cli/tests/snapshots/auth_snapshots__auth_status_tsv_not_logged_in.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
server	user	expires_at	state
https://api.example.com			not_logged_in
